--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ defaults:
   # _posts
   - scope:
       path: ""
-      type: posts
+      type: "posts"
     values:
       layout: single
       author_profile: true
