--- a/_config.yml
+++ b/_config.yml
@@ -41,14 +41,14 @@ author:
 nav:
   Home:
     - '/'
-  Blog:
-    - '/blog/'
-    - { Categories: '/blog/categories/' }
-    - { Tags: '/blog/tags/' }
+  Programing:
+    - '/programing/'
+    - { 알고리즘: '/programing/알고리즘/' }
+    - { java: '/programing/java/' }
 
 # Where are tags and categories displayed
-tag_page: '/blog/tags/'
-category_page: '/blog/categories/'
+tag_page: '/programing/java/'
+category_page: '/programing/알고리즘/'
 
 hero:
   image: /public/img/we_will_be_giants_by_yalestewart.jpg
