--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site Info
-title:        Ringsterz Log # 블로그 제목
+title:        Sanggil Log # 블로그 제목
 tagline:      'Log for everything' # 페이지 제목 옆에 나타나는 설명 글
 description:  '하루를 정리하는 데일리 로그 ' # 블로그 설명
 baseurl:      ''
