--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ sass:
   style: compressed
   sass_dir: _scss
 paginate: 10
-paginate_path: '/blog/page:num'
+paginate_path: 'page:num'
 permalink: pretty
 plugins:
   - jekyll-paginate
