--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ sass:
   style: compressed
   sass_dir: _scss
 paginate: 10
-paginate_path: 'page:num'
-permalink: pretty
+#paginate_path: 'page:num'
+permalink: /:year/:month/:title.html
 plugins:
   - jekyll-paginate
 # Custom vars
