--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo:         '/public/logo.png'
 
 # Site configurations
 gems:
-  - jekyll-paginate
+  - jekyll-paginate-v2
   - jekyll-seo-tag
 markdown: kramdown
 kramdown:
@@ -18,10 +18,10 @@ sass:
   style: compressed
   sass_dir: _scss
 paginate: 10
-paginate_path: 'Category/환경설정/page:num'
+paginate_path: 'page/page:num'
 permalink: /:year/:month/:title.html
 plugins:
-  - jekyll-paginate
+  - jekyll-paginate-v2
 # Custom vars
 version: 1.0.0
 
