--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,11 @@ excerpt_separator: "<!-- more -->"
 sass:
   style: compressed
   sass_dir: _scss
-paginate: 10
-paginate_path: 'page/page:num'
+pagination:
+  enabled: true
+  per_page: 10
+  sort_reverse: true
+
 permalink: /:year/:month/:title.html
 plugins:
   - jekyll-paginate-v2
