--- a/_config.yml
+++ b/_config.yml
@@ -71,4 +71,4 @@ theme_settings:
   str_previous_page: "Prev"
   post_navigation: true
 
-#excerpt_separator: <!--more-->
+excerpt_separator: <!--more-->
