--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:        Sanggil Log # 블로그 제목
 tagline:      'Log for Develop' # 페이지 제목 옆에 나타나는 설명 글
 description:  '소소한 일상의 기록' # 블로그 설명
-baseurl:      ''
+baseurl:      https://sanggil1107.github.io/
 url:          https://sanggil1107.github.io/
 logo:         '/public/logo.png'
 
