카테고리 추가

--- a/_config.yml
+++ b/_config.yml
@@ -46,6 +46,7 @@ nav:
   ABOUT:
   CATEGORY:
     - '/blog/'
+    - { Web: '/blog/categories/' }
     - { Programming: '/blog/categories/' }
     - { Cloud: '/blog/categories/' }
     - { 개발환경: '/blog/categories/' }
