--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ sass:
   sass_dir: _scss
 paginate: 10
 paginate_path: "page:num"
+highliger: rouge
 
 permalink: /:year/:month/:title.html
 plugins:
