카탈로그 추가

--- a/_config.yml
+++ b/_config.yml
@@ -47,6 +47,7 @@ nav:
   ABOUT:
   CATEGORY:
     - '/blog/'
+    - { AI & BigData: '/blog/categories/' }
     - { Web: '/blog/categories/' }
     - { Programming: '/blog/categories/' }
     - { Cloud: '/blog/categories/' }
